feat: use `futures-timer` and upgrade dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,28 +10,24 @@ repository = "https://github.com/softprops/again"
 keywords = ["retry", "futures", "futures-retry"]
 license = "MIT"
 readme = "README.md"
-categories = [
-  "asynchronous",
-  "wasm",
-  "web-programming"
-]
+categories = ["asynchronous", "wasm", "web-programming"]
 
 [badges]
 maintenance = { status = "actively-developed" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = ["log", "rand"]
-wasm-bindgen = ["getrandom/wasm-bindgen"]
+default = ["dep:log", "dep:rand"]
+wasm-bindgen = ["getrandom/wasm-bindgen", "futures-timer/wasm-bindgen"]
 
 [dependencies]
 log = { version = "0.4", optional = true }
 rand = { version = "0.8", optional = true }
 getrandom = { version = "0.2", optional = true }
-wasm-timer = "0.2"
+futures-timer = { version = "3" }
 
 [dev-dependencies]
 approx = "0.5"
-pretty_env_logger = "0.4"
-reqwest = "0.11"
-tokio = { version = "1", features = ["rt-multi-thread","macros"] }
+pretty_env_logger = "0.5"
+reqwest = "0.12"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
