Test wasm implementation of Delay

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ license = "MIT"
 readme = "README.md"
 categories = ["asynchronous", "wasm", "web-programming"]
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [badges]
 maintenance = { status = "actively-developed" }
 
@@ -26,6 +29,7 @@ getrandom = { version = "0.2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = "0.3.69"
+wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.42"
 getrandom = { version = "0.2", features = ["js"] }
 
@@ -39,3 +43,6 @@ reqwest = "0.11"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
